# EnduroSat

./: CMakeLists.txt  README.md  Setup.txt  build.bat  folder_setup.sh
documents/: EnduroSat Project - Technical Documentation.docx  EnduroSat_Technical_Documentation.docx
headers/: FreeRTOSConfig.h  device1.h  slave.h
headers/stubs/: portmacro.h  stack_overflow.c  win_port.c
simulation/: CMakeLists.txt  build.bat  build.sh
simulation/config/: FreeRTOSConfig.h  fake_assert.h  heap_region.c  port.c  portmacro.c  portmacro.h
simulation/config/stubs/: hooks.c  stack_overflow.c  win_port.c
simulation/headers/: device1.h  device2.h  main.h  message.h  slave.h  test_runner.h
simulation/src/: device1.c  device2.c  main.c  test_main.c  test_runner.c
src/: device2.c  portmacro.c
